--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,11 @@
 body {
-    background: pink;
-}
-
-Nur Test und noch mehr
-
-body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth; /* macht Anker weich scrollend */
+    line-height: 1.6;
+    color: #222;
+    background-color: pink;
+    scroll-behavior: smooth;
 }
 
 header {
